@@ -59,7 +59,7 @@ import org.openflexo.logging.FlexoLogger;
  */
 public class FlexoObjectIDManager {
 
-	private final FlexoProject project;
+	private final FlexoProject<?> project;
 
 	private static final Logger logger = FlexoLogger.getLogger(FlexoObjectIDManager.class.getPackage().toString());
 
@@ -69,7 +69,7 @@ public class FlexoObjectIDManager {
 	/**
 	 * 
 	 */
-	public FlexoObjectIDManager(FlexoProject project) {
+	public FlexoObjectIDManager(FlexoProject<?> project) {
 		this.project = project;
 	}
 
@@ -80,21 +80,18 @@ public class FlexoObjectIDManager {
 			try {
 				r.getResourceData(null);
 			} catch (FileNotFoundException e) {
-				// TODO Auto-generated catch block
 				e.printStackTrace();
 			} catch (ResourceLoadingCancelledException e) {
-				// TODO Auto-generated catch block
 				e.printStackTrace();
 			} catch (FlexoException e) {
-				// TODO Auto-generated catch block
 				e.printStackTrace();
 			}
 		}
 
 		// Iterate on all objects to validate
-		used = new Hashtable<Long, FlexoProjectObject>();
-		badObjects = new Vector<FlexoProjectObject>();
-		Vector<FlexoProjectObject> objectsToUnregister = new Vector<FlexoProjectObject>();
+		used = new Hashtable<>();
+		badObjects = new Vector<>();
+		// Unused Vector<FlexoProjectObject> objectsToUnregister = new Vector<>();
 
 		// TODO: implement this
 		logger.warning("Not implemented yet");
@@ -117,7 +114,7 @@ public class FlexoObjectIDManager {
 				}
 			}
 		}
-
+		
 		for (FlexoProjectObject obj : objectsToUnregister) {
 			project.unregister(obj);
 		}*/
@@ -155,7 +152,7 @@ public class FlexoObjectIDManager {
 			}
 			badObjects.add(o);
 		}
-		FlexoProjectObject old = used.put(new Long(o.getFlexoID()), o);
+		FlexoProjectObject old = used.put(Long.valueOf(o.getFlexoID()), o);
 		if (old != null && old != o) {
 			long newID = o.getProject().getNewFlexoID();
 			if (logger.isLoggable(Level.WARNING)) {
